2010-06-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Tests on silent-mode for C/Libtool made stricter.
	* tests/silent.test: Made stricter w.r.t. the grepping of the
	output produced by `make'.
	* tests/silent2.test: Likewise.
	* tests/silent4.test: Likewise.
	* tests/silent9.test: Likewise.
	* tests/silent3.test: Likewise, and add a final `make distclean'
	command to keep it better in sync with tests/silent{4,9}.test.

	Improved test silent5.test.
	* tests/silent5.test: Remove by hand all generated C files after
	non-verbose builds, to ensure the following builds are clean.
	Try to clean and rebuild with the same verbosity and without
	removing generated sources in between, to check that this does
	not trigger a different set of rules.  Make grepping of make's
	output stricter.  Improved/added some comments.

	New tests for Automake silent-mode with Fortran.
	* tests/silentf77.test: New test.
	* tests/silentf90.test: Likewise.
	* tests/Makefile.am (TESTS): Updated accordingly.

	New test `silentcxx.test' (Automake silent-mode with C++).
	* tests/silentcxx.test: New test.
	* tests/Makefile.am (TESTS): Updated accordingly.

	New test `silentyacc.test' (Automake silent-mode with Yacc).
	* tests/silentyacc.test: New test.
	* tests/Makefile.am (TESTS): Updated accordingly.

	New test `silentlex.test' (Automake silent-mode with Lex).
	* tests/silentlex.test: New test.
	* tests/Makefile.am (TESTS): Updated accordingly.

	Relax tests on silent-rules to cater to overly verbose makes.
	* tests/silent.test: When testing silent builds, don't fail if
	make's output simply contains the `mv' substring, but only if
	it contains the `mv ' substring (note the trailing space).
	* tests/silent2.test: Likewise.
	* tests/silent3.test: Likewise.
	* tests/silent4.test: Likewise.
	* tests/silent5.test: Likewise.
	* tests/silent9.test: Likewise.

2010-01-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix silent-rules output for disabled dependency tracking.