@@ -1,5 +1,5 @@
 #!/bin/sh
-# Copyright (C) 2009  Free Software Foundation, Inc.
+# Copyright (C) 2009, 2010 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -53,7 +53,7 @@ grep 'cp ' stdout && Exit 1
 $MAKE clean
 $MAKE V=1 >stdout || { cat stdout; Exit 1; }
 cat stdout
-grep 'GEN foo' stdout && Exit 1
+grep 'GEN ' stdout && Exit 1
 grep 'cp ' stdout
 
 $MAKE distclean
@@ -61,7 +61,7 @@ $MAKE distclean
 ./configure --disable-silent-rules
 $MAKE >stdout || { cat stdout; Exit 1; }
 cat stdout
-grep 'GEN foo' stdout && Exit 1
+grep 'GEN ' stdout && Exit 1
 grep 'cp ' stdout
 
 $MAKE distclean
