@@ -1,5 +1,10 @@
 2010-06-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Make tests on user extensibility of silent-rules mode stricter.
+	* tests/silent6.test: Made stricter w.r.t. the grepping of the
+	output produced by `make'.
+	* tests/silent7.test: Likewise.
+
 	Tests on silent-mode for C/Libtool made stricter.
 	* tests/silent.test: Made stricter w.r.t. the grepping of the
 	output produced by `make'.
